--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Martin's CV</title>
-<link rel="stylesheet" type="text/css" href="My Styles.css">
+	<title>David's CV</title>
+<link rel="stylesheet" type="text/css" href="index.css">
 </head>
 
 
@@ -11,7 +11,7 @@
 	<h2>MY RESUME</h2>
 	<div class="Martin">
 	<div class="martinfirst">
-	<b>Name</b> <p>Mugabo Martin</p>
+	<b>Name</b> <p>Kato David</p>
 	<b>DOB</b>  <p>2/12/1997</p>
 </div>
 	<span> 
