--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
 	 <b>Makerere University Business School - 2017-2018 </b>
 	<p> Attended this awesome school and held a lot of leadership positions </p> </span>
      </div>
- </span>
+		<h2>Lesson </h>
+ <div class="Lesson">
+	 <p>I have understood what you have taught me.</p>
+	 </div>	
+</span>
  </body>
 </html>
