--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	 <b>Makerere University Business School - 2017-2018 </b>
 	<p> Attended this awesome school and held a lot of leadership positions </p> </span>
      </div>
-		<h2>Lesson </h2>
+		<h2 class="NET">Lesson </h2>
  <div class="Lesson">
 	 <p>I have understood what you have taught me.</p>
 	 </div>	
