--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 	<p> Attended this awesome school and held a lot of leadership positions </p> </span>
      </div>
 		<h2 class="NET">Lesson </h2>
- <div class="Lesson">
-	 <p>I have understood what you have taught me.</p>
-	 </div>	
+
+	 <p class="Lesson">I have understood what you have taught me.</p>
+	 	
 </span>
  </body>
 </html>
